# indicator-printers

./: .bzrignore  CMakeLists.txt
data/: CMakeLists.txt  com.canonical.indicator.printers  indicator-printers.conf.in  indicator-printers.desktop.in
debian/: changelog  control  copyright  rules
src/: CMakeLists.txt  actions-live.cpp  actions-live.h  actions.cpp  actions.h  client.h  cups-client.cpp  cups-client.h  exporter.cpp  exporter.h  job.h  main.cpp  menu.cpp  menu.h  printer.h  utils.cpp  utils.h
tests/: CMakeLists.txt  actions-mock.h  client-mock.h  glib-fixture.h  test_exporter.cpp  test_menu.cpp  test_utils.cpp
